--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-minimal
-title: [Black-box Adversarial Attacks on Network-wide Multi-step Traffic State Prediction Models]
-description: [A short description of your site's purpose]
+title: Black-box Adversarial Attacks on Network-wide Multi-step Traffic State Prediction Models
