--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-title: Black-box Adversarial Attacks on Network-wide Multi-step Traffic State Prediction Models
+title:
+description: 
