--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title:
-description: 
+title: Black-box Adversarial Attacks on Network-wide Multi-step Traffic State Prediction Models
+description: Accepted to IEEE International Conference on Intelligent Transportation Systems (ITSC), 2021
